Add a details button to active listed reports

--- a/app/sass/components/modules/content-list.scss
+++ b/app/sass/components/modules/content-list.scss
@@ -86,6 +86,14 @@
             > div.details {
                 display: block;
             }
+
+            > div.comments {
+                display: none;
+            }
+
+            > div.actions {
+                top: $content-list-det-actions-top;
+            }
         }
     }
 
