--- a/app/sass/theme/variables.scss
+++ b/app/sass/theme/variables.scss
@@ -106,6 +106,7 @@ $select-list-placeholder-border:        $light-gray 1px dashed;
 // content list formatting and colors
 $content-list-bg-color:                 lighten($section-header-bg-color, 20%);
 $content-list-item-spacing:             2px;
+$content-list-det-actions-top:          .7em;
 
 $content-list-1-button-margin-top:      .3em;
 $content-list-1-select-margin-top:      .2em;
