--- a/app/views/modules/runner/report.html
+++ b/app/views/modules/runner/report.html
@@ -22,6 +22,12 @@
             <div class="details">
                 <span class="legend">{{::runReport.message}}</span>
             </div>
+            <div class="actions">
+                <button>
+                    <i class="fa fa-search-plus"></i>
+                    <span translate="RUNNER.REPORT.DETAILS"></span>
+                </button>
+            </div>
         </div>
     </li>
 </ul>
