--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -21,8 +21,8 @@ input[type='submit'] {
 
 body {
   -webkit-font-smoothing: antialiased;
-  background-color: white;
-  color: #333333;
+  background-color: #fff;
+  color: #333;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
   line-height: 1.5; }
@@ -72,7 +72,7 @@ a {
     outline: none; }
 
 hr {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #ddd;
   border-left: 0;
   border-right: 0;
   border-top: 0;
@@ -84,7 +84,7 @@ picture {
   max-width: 100%; }
 
 blockquote {
-  border-left: 2px solid #dddddd;
+  border-left: 2px solid #ddd;
   color: #595959;
   margin: 1.5em 0;
   padding-left: 0.75em; }
@@ -97,7 +97,7 @@ cite {
 
 fieldset {
   background: #f7f7f7;
-  border: 1px solid #dddddd;
+  border: 1px solid #ddd;
   margin: 0 0 0.75em;
   padding: 1.5em; }
 
@@ -127,7 +127,7 @@ select[multiple=multiple] {
   transition: border-color;
   background-color: #fff;
   border-radius: 3px;
-  border: 1px solid #dddddd;
+  border: 1px solid #ddd;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
@@ -182,7 +182,7 @@ th {
   text-align: left; }
 
 td {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #ddd;
   padding: 0.75em 0; }
 
 tr,
@@ -223,7 +223,7 @@ input[type='submit'] {
 
 .progress-bar {
   background-color: #f2f2f2;
-  border: 1px solid #dddddd;
+  border: 1px solid #ddd;
   box-shadow: inset 0 0 3px 0 rgba(115, 115, 115, 0.15);
   border-radius: 3px;
   height: 30px;
@@ -251,31 +251,26 @@ input[type='submit'] {
 @-webkit-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @-moz-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @-ms-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @-o-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 .radial-progress {
@@ -596,7 +591,7 @@ input[type='submit'] {
 body {
   margin: 0;
   background-color: #e6e6e6;
-  color: #333333; }
+  color: #333; }
   body h1,
   body h2,
   body h3,
@@ -616,7 +611,7 @@ div.layout {
     z-index: 10000; }
     div.layout > header .title,
     div.layout > header .search {
-      color: #dddddd;
+      color: #ddd;
       font-size: 2em;
       position: relative;
       float: left; }
@@ -647,11 +642,11 @@ div.layout {
         background: none;
         border: 0;
         box-shadow: none;
-        color: #dddddd;
+        color: #ddd;
         border-radius: 0; }
         div.layout > header .search input:-webkit-autofill {
           -webkit-box-shadow: 0 0 0 50px #1a1a1a inset;
-          -webkit-text-fill-color: #dddddd; }
+          -webkit-text-fill-color: #ddd; }
   div.layout > aside,
   div.layout > .main {
     top: 4em; }
@@ -685,9 +680,9 @@ div.layout {
         div.layout > aside .modules li:hover {
           cursor: pointer;
           background: #666666;
-          color: white; }
+          color: #fff; }
         div.layout > aside .modules li.active {
-          background: black;
+          background: #000;
           color: #049cdb; }
         div.layout > aside .modules li .badge {
           position: absolute;
@@ -695,7 +690,7 @@ div.layout {
           right: .3em;
           padding: 0 .5em;
           background: #a52b1f;
-          color: white;
+          color: #fff;
           border-radius: 0.3em;
           font-size: .4em; }
     div.layout > aside .sections li {
@@ -713,7 +708,7 @@ div.layout {
         display: table;
         clear: both; }
       div.layout > aside .sections li:hover, div.layout > aside .sections li.active {
-        color: white;
+        color: #fff;
         background-color: #666666; }
       div.layout > aside .sections li:hover {
         cursor: pointer;
@@ -726,7 +721,7 @@ div.layout {
         right: .3em;
         padding: 0 .5em;
         background: #a52b1f;
-        color: white;
+        color: #fff;
         border-radius: 0.3em;
         font-size: .9em; }
     div.layout > aside h1 {
@@ -757,11 +752,11 @@ footer.feedback {
     background-color: #87b848;
     color: #e6e6e6; }
   footer.feedback.alert {
-    background-color: #ff9900;
+    background-color: #f90;
     color: #e6e6e6; }
   footer.feedback.notice {
     background-color: #ffc40d;
-    color: #333333; }
+    color: #333; }
   footer.feedback i {
     opacity: .75;
     font-size: 1.8em;
@@ -848,10 +843,10 @@ i.writer:before {
     .main-content-list li.cl > div.selectable:hover {
       cursor: pointer;
       background: #49c7fc;
-      color: white; }
+      color: #fff; }
       .main-content-list li.cl > div.selectable:hover > div.comments span,
       .main-content-list li.cl > div.selectable:hover > div.comments a {
-        color: white; }
+        color: #fff; }
       .main-content-list li.cl > div.selectable:hover > div.comments a.hover {
         color: #e6e6e6; }
     .main-content-list li.cl > div > div.title {
@@ -884,6 +879,10 @@ i.writer:before {
       max-height: 4.63241em; }
       .main-content-list li.cl > div.detailed.active > div.details {
         display: block; }
+      .main-content-list li.cl > div.detailed.active > div.comments {
+        display: none; }
+      .main-content-list li.cl > div.detailed.active > div.actions {
+        top: 0.7em; }
   .main-content-list > li.cl > div > div.details {
     margin: 0 0.25em; }
   .main-content-list > li.cl > div.active > div.title > .radial-progress .circle .mask .fill,
@@ -892,7 +891,7 @@ i.writer:before {
   .main-content-list > li.cl > ul li.cl > div.selectable:hover > div.title > .radial-progress .circle .mask .fill,
   .main-content-list > li.cl > ul li.cl > ul li.cl > div.active > div.title > .radial-progress .circle .mask .fill,
   .main-content-list > li.cl > ul li.cl > ul li.cl > div.selectable:hover > div.title > .radial-progress .circle .mask .fill {
-    background: white; }
+    background: #fff; }
   .main-content-list > li.cl > div.active > div.title > .radial-progress .inset,
   .main-content-list > li.cl > div.selectable:hover > div.title > .radial-progress .inset,
   .main-content-list > li.cl > ul li.cl > div.active > div.title > .radial-progress .inset,
@@ -950,7 +949,7 @@ i.writer:before {
           clip: rect(0, 1em, 1em, 0.5em); }
           .main-content-list > li.cl > div > div.title > .radial-progress .circle .mask .fill {
             clip: rect(0, 0.5em, 1em, 0);
-            background: white; }
+            background: #fff; }
         .main-content-list > li.cl > div > div.title > .radial-progress .inset {
           width: 0.65em;
           height: 0.65em;
@@ -1034,7 +1033,7 @@ i.writer:before {
             clip: rect(0, 1em, 1em, 0.5em); }
             .main-content-list > li.cl > ul li.cl > div > div.title > .radial-progress .circle .mask .fill {
               clip: rect(0, 0.5em, 1em, 0);
-              background: white; }
+              background: #fff; }
           .main-content-list > li.cl > ul li.cl > div > div.title > .radial-progress .inset {
             width: 0.75em;
             height: 0.75em;
@@ -1084,7 +1083,7 @@ i.writer:before {
             .main-content-list > li.cl > ul li.cl > ul li.cl > div > div.title > .radial-progress .inset {
               width: 0;
               height: 0;
-              background: white;
+              background: #fff;
               margin-left: 0.5em;
               margin-top: 0.5em; }
         .main-content-list > li.cl > ul li.cl > ul li.cl:first-child > div {
@@ -1122,16 +1121,16 @@ i.writer:before {
   .main-content-list li.cl > div.active,
   .main-content-list li.cl > div.active:hover {
     background: #049cdb;
-    color: white; }
+    color: #fff; }
     .top-filter.active .select > button, .top-filter.active:hover .select > button,
     .main-content-list li.cl > div.active .select > button,
     .main-content-list li.cl > div.active:hover .select > button {
       background: none;
-      border: white 2px solid; }
+      border: #fff 2px solid; }
       .top-filter.active .select > button span, .top-filter.active:hover .select > button span,
       .main-content-list li.cl > div.active .select > button span,
       .main-content-list li.cl > div.active:hover .select > button span {
-        color: white; }
+        color: #fff; }
     .top-filter.active .actions, .top-filter.active:hover .actions,
     .main-content-list li.cl > div.active .actions,
     .main-content-list li.cl > div.active:hover .actions {
@@ -1141,11 +1140,11 @@ i.writer:before {
     .top-filter.active .comments > span, .top-filter.active:hover .comments > span,
     .main-content-list li.cl > div.active .comments > span,
     .main-content-list li.cl > div.active:hover .comments > span {
-      color: white; }
+      color: #fff; }
       .top-filter.active .comments > span.highlight, .top-filter.active:hover .comments > span.highlight,
       .main-content-list li.cl > div.active .comments > span.highlight,
       .main-content-list li.cl > div.active:hover .comments > span.highlight {
-        color: white; }
+        color: #fff; }
   .top-filter > div > button span,
   .top-filter > div .select > button span,
   .main-content-list li.cl > div > div > button span,
@@ -1153,13 +1152,13 @@ i.writer:before {
     line-height: 1.5em; }
   .top-filter > div > button,
   .main-content-list li.cl > div > div > button {
-    background: #333333;
+    background: #333;
     border: none;
     padding: 0.25em 1em; }
   .top-filter > div .select > button,
   .main-content-list li.cl > div > div .select > button {
-    background: #dddddd;
-    border: #dddddd 2px solid;
+    background: #ddd;
+    border: #ddd 2px solid;
     padding: 0.25em 0.5em; }
     .top-filter > div .select > button span,
     .main-content-list li.cl > div > div .select > button span {
@@ -1172,7 +1171,7 @@ i.writer:before {
   position: relative; }
   .select > button {
     text-align: left;
-    border: #dddddd 2px solid;
+    border: #ddd 2px solid;
     position: relative; }
     .select > button.active span {
       min-width: 10em; }
@@ -1198,7 +1197,7 @@ i.writer:before {
     font-size: 1.1em;
     left: 0;
     top: 2.67273em;
-    background: white;
+    background: #fff;
     width: 100%;
     padding: 0.4em 0;
     border: #c4c4c4 0.1em solid;
@@ -1227,7 +1226,7 @@ i.writer:before {
           position: absolute;
           right: 1em; }
       .select .select-dropdown li.placeholder {
-        border-bottom: #dddddd 1px dashed; }
+        border-bottom: #ddd 1px dashed; }
     .select .select-dropdown button {
       background: none;
       color: #666666;
@@ -1239,20 +1238,19 @@ i.writer:before {
         background: #e6e6e6; }
 
 .tip {
-  position: absolute;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   left: 0;
   font-size: .7em;
-  background: #333333;
-  color: white;
+  background: #333;
+  color: #fff;
   border-radius: 0.3em;
   padding: 0 .5em;
   opacity: 0;
   cursor: default; }
   .tip.left {
     position: absolute;
-    background: #333333;
-    border: 0 solid #333333; }
+    background: #333;
+    border: 0 solid #333; }
     .tip.left:after, .tip.left:before {
       left: 100%;
       border: solid transparent;
@@ -1263,14 +1261,14 @@ i.writer:before {
       pointer-events: none; }
     .tip.left:after {
       border-color: rgba(119, 100, 213, 0);
-      border-left-color: #333333;
+      border-left-color: #333;
       border-width: 0.3em;
       top: 50%;
       margin-top: -0.3em;
       z-index: 3; }
     .tip.left:before {
       border-color: rgba(194, 225, 245, 0);
-      border-left-color: #333333;
+      border-left-color: #333;
       border-width: 0.3em;
       top: 50%;
       margin-top: -0.3em;
@@ -1295,7 +1293,7 @@ i.writer:before {
 input[type="submit"].primary,
 button.primary {
   background-color: #049cdb;
-  color: white; }
+  color: #fff; }
   input[type="submit"].primary:hover,
   button.primary:hover {
     background-color: #0378a9;
@@ -1327,7 +1325,7 @@ input.ng-invalid {
   padding: .5em;
   background-color: #ffc40d;
   border-radius: 3px;
-  color: #333333; }
+  color: #333; }
 
 .select button {
   border-radius: .45em; }
@@ -1336,7 +1334,7 @@ input.ng-invalid {
 .select .select-dropdown {
   border-radius: .3em;
   position: absolute;
-  background: white;
+  background: #fff;
   border: 0.1em solid #c4c4c4; }
   .select .select-dropdown:after, .select .select-dropdown:before {
     bottom: 100%;
@@ -1348,7 +1346,7 @@ input.ng-invalid {
     pointer-events: none; }
   .select .select-dropdown:after {
     border-color: rgba(119, 100, 213, 0);
-    border-bottom-color: white;
+    border-bottom-color: #fff;
     border-width: 0.5em;
     left: 50%;
     margin-left: -0.5em;
@@ -1367,12 +1365,12 @@ input.ng-invalid {
 
 button {
   background-color: #049cdb;
-  color: white; }
+  color: #fff; }
   button:hover {
     background-color: #0378a9;
     color: #e6e6e6; }
   button.secondary {
-    background-color: #333333; }
+    background-color: #333; }
     button.secondary:hover {
       background-color: #1a1a1a; }
 
@@ -1599,53 +1597,43 @@ input.ng-invalid {
 
 @keyframes badge {
   0%,
-  20%,
-  40%,
-  60%,
-  80%,
-  100% {
+    20%,
+    40%,
+    60%,
+    80%,
+    100% {
     transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-
   0% {
     transform: scale3d(0.3, 0.3, 0.3); }
-
   20% {
     transform: scale3d(1.2, 1.2, 1.2); }
-
   40% {
     transform: scale3d(0.9, 0.9, 0.9); }
-
   60% {
     transform: scale3d(1.1, 1.1, 1.1); }
-
   80% {
     transform: scale3d(0.95, 0.95, 0.95); }
-
   100% {
     transform: scale3d(1, 1, 1); } }
 @keyframes feedback {
   0%,
-  40%,
-  80%,
-  100% {
+    40%,
+    80%,
+    100% {
     transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-
   0% {
     transform: scaleY(0.3);
     bottom: -3.5em; }
-
   20% {
     transform: scaleY(1.2);
     bottom: -0.35em; }
-
   40% {
     transform: scaleY(1); }
-
   60% {
     transform: scaleY(1.1); }
-
   80% {
     transform: scaleY(0.98); }
-
   100% {
     transform: scaleY(1); } }
+
+/*# sourceMappingURL=main.css.map */
