Load the selected mock report in the report details view and show the report title in the header

--- a/app/views/modules/runner/report.html
+++ b/app/views/modules/runner/report.html
@@ -1,1 +1,6 @@
-Le report cometh here
+<div class="top-filter filter-1 ic selectable" ng-show="report.loaded" ng-class="{'active':report.selectedItem === null}" ng-click="running.selectedItem = null">
+    <i class="fa fa-chevron-left"></i>
+    <div class="filters">
+        <span>{{ run.title }}</span>
+    </div>
+</div>
