--- a/app/views/modules/runner/available.html
+++ b/app/views/modules/runner/available.html
@@ -37,7 +37,7 @@
             <li class="ic cl" ng-repeat="story in book.stories track by story.id">
                 <div class="selectable" ng-class="{'active':available.selectedItem === 'story'+story.id}" ng-click="available.selectedItem = 'story'+story.id" data-toggle="story">
                     <div class="title">
-                        <i class="fa"></i>
+                        <i class="fa expand"></i>
                         <span class="separate">{{::story.title}}</span>
                     </div>
                     <div class="actions">
