--- a/app/views/modules/runner/running.html
+++ b/app/views/modules/runner/running.html
@@ -22,7 +22,7 @@
         </div>
         <ul>
             <li class="ic cl" ng-repeat="story in run.stories track by (run.id+'-'+story.id)">
-                <div class="selectable" ng-class="{'active':running.selectedItem === 'story'+run.id+'-'+story.id}" ng-click="running.selectedItem = 'story'+run.id+'-'+story.id" data-toggle="story">
+                <div class="selectable" ng-class="{'active':running.selectedItem === 'story-'+run.id+'-'+story.id}" ng-click="running.selectedItem = 'story-'+run.id+'-'+story.id" data-toggle="story">
                     <div class="title">
                         <div class="radial-progress" progress="story.percentage" highlight="story.highlight"></div>
                         <span class="separate">{{::story.title}}</span>
@@ -30,7 +30,7 @@
                 </div>
                 <ul>
                     <li class="ic cl" ng-repeat="scenario in story.scenarios track by (run.id+'-'+scenario.id)">
-                        <div class="selectable detailed {{scenario.highlight}}" ng-class="{'active':running.selectedItem === 'scenario'+run.id+'-'+scenario.id}" ng-click="running.selectedItem = 'scenario'+run.id+'-'+scenario.id">
+                        <div class="selectable detailed {{scenario.highlight}}" ng-class="{'active':running.selectedItem === 'scenario-'+run.id+'-'+scenario.id}" ng-click="running.selectedItem = 'scenario-'+run.id+'-'+scenario.id">
                             <div class="title">
                                 <div class="radial-progress" progress="scenario.percentage" highlight="scenario.highlight"></div>
                                 <span class="separate">{{::scenario.title}}</span>
