--- a/app/sass/theme/variables.scss
+++ b/app/sass/theme/variables.scss
@@ -140,6 +140,7 @@ $content-list-3-bg-color:               $content-list-item-1-bg-color;
 
 $run-failed-color:                      $light-red;
 $run-success-color:                     $lime;
+$run-skipped-color:                     $yellow;
 $run-progress-scenario-todo-bg:         lighten($light-gray, 4%);
 $run-progress-scenario-done-bg:         darken($light-gray, 8%);
 
