Display scenarios and variable with minimum styling.

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -24,6 +24,7 @@
 @import 'components/modules/tooltip';
 @import 'components/modules/hero-notice';
 @import 'components/modules/pagination';
+@import 'components/modules/variable-view';
 
 // finally enhance the components with some theme magic
 @import 'theme/styles';
